--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "training-center",
-  "version": "0.1.0",
+  "name": "garuda-academy",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
