--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@supabase/supabase-js": "^2.39.0",
     "@tanstack/react-query": "^5.17.0",
     "lucide-react": "^0.294.0",
+    "marked": "^16.4.1",
     "next": "14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -30,4 +31,3 @@
     "typescript": "^5"
   }
 }
-
