--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.39.0",
     "@tanstack/react-query": "^5.17.0",
+    "@types/qrcode": "^1.5.6",
     "lucide-react": "^0.294.0",
     "marked": "^16.4.1",
     "next": "14.0.4",
+    "pdf-lib": "^1.17.1",
+    "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recharts": "^2.10.3",
