--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.6.0",
     "recharts": "^2.10.3",
     "zustand": "^4.4.7"
   },
