--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.6.0",
+    "react-quill": "^2.0.0",
     "recharts": "^2.10.3",
     "zustand": "^4.4.7"
   },
