--- a/env.example
+++ b/env.example
@@ -3,10 +3,29 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key-here
 SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here
 NEXT_PUBLIC_SUPABASE_STORAGE_URL=http://localhost:8000
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
+
+# Email Provider Configuration
+# Set to 'ses' for Amazon SES or 'gmail' for Gmail SMTP (default: gmail)
+EMAIL_PROVIDER=gmail
+
+# Gmail SMTP Configuration (if EMAIL_PROVIDER=gmail)
 GMAIL_SMTP_HOST=smtp.gmail.com
 GMAIL_SMTP_PORT=587
 GMAIL_SMTP_USER=your-email@gmail.com
 GMAIL_SMTP_PASS=your-16-character-app-password
 GMAIL_SENDER_NAME=GARUDA-21 Training Center
+
+# Amazon SES SMTP Configuration (if EMAIL_PROVIDER=ses)
+AWS_SES_REGION=us-east-1
+AWS_SES_SMTP_HOST=email-smtp.us-east-1.amazonaws.com
+AWS_SES_SMTP_PORT=587
+AWS_SES_SMTP_USER=AKIAIOSFODNN7EXAMPLE
+AWS_SES_SMTP_PASS=your-ses-smtp-password
+AWS_SES_FROM_EMAIL=noreply@yourdomain.com
+EMAIL_SENDER_NAME=GARUDA-21 Training Center
+AWS_SES_PRODUCTION=false
+AWS_SES_DAILY_LIMIT=50000
+AWS_SES_HOURLY_LIMIT=2000
+
 GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=your-google-client-secret
