--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/supabase-js": "^2.39.0",
     "@tanstack/react-query": "^5.17.0",
     "@types/qrcode": "^1.5.6",
+    "browser-image-compression": "^2.0.2",
     "lucide-react": "^0.294.0",
     "marked": "^16.4.1",
     "next": "14.0.4",
@@ -26,6 +27,7 @@
     "recharts": "^2.10.3",
     "systeminformation": "^5.27.11",
     "xlsx": "^0.18.5",
+    "zod": "^4.1.13",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
