--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.17.0",
     "@types/qrcode": "^1.5.6",
     "browser-image-compression": "^2.0.2",
+    "framer-motion": "^12.23.25",
     "lucide-react": "^0.294.0",
     "marked": "^16.4.1",
     "next": "14.0.4",
